Add gitignore for privatesettings.config

--- a/graph-tutorial/graph-tutorial.csproj
+++ b/graph-tutorial/graph-tutorial.csproj
@@ -330,6 +330,7 @@
     <Content Include="Content\bootstrap-grid.rtl.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="PrivateSettings.config" />
     <None Include="Properties\PublishProfiles\app-sdteset - Web Deploy.pubxml" />
     <Content Include="Scripts\bootstrap.min.js.map" />
     <Content Include="Scripts\bootstrap.js.map" />
