--- a/universal-print-dotnet/Web.Debug.config
+++ b/universal-print-dotnet/Web.Debug.config
@@ -27,4 +27,10 @@
       </customErrors>
     -->
   </system.web>
+	<appSettings>
+		<add key="ida:AppID" value="debug" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="ida:AppSecret" value="debug" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="ida:TenantId" value="debug" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="ida:RedirectUri" value="https://localhost:44387/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+	</appSettings>
 </configuration>
