--- a/universal-print-dotnet/packages.config
+++ b/universal-print-dotnet/packages.config
@@ -16,10 +16,10 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.3" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.3" targetFramework="net48" />
-  <package id="Microsoft.Graph" version="4.30.0" targetFramework="net48" />
-  <package id="Microsoft.Graph.Core" version="2.0.8" targetFramework="net48" />
+  <package id="Microsoft.Graph" version="4.54.0" targetFramework="net48" />
+  <package id="Microsoft.Graph.Core" version="2.0.15" targetFramework="net48" />
   <package id="Microsoft.Identity.Client" version="4.70.0" targetFramework="net48" />
-  <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.67.2" targetFramework="net48" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.70.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Abstractions" version="8.6.1" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="8.6.1" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Logging" version="8.6.1" targetFramework="net48" />
@@ -50,15 +50,22 @@
   <package id="System.ClientModel" version="1.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="9.0.3" targetFramework="net48" />
   <package id="System.IdentityModel.Tokens.Jwt" version="8.6.1" targetFramework="net48" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.IO.Pipelines" version="9.0.3" targetFramework="net48" />
   <package id="System.Memory" version="4.6.2" targetFramework="net48" />
   <package id="System.Memory.Data" version="9.0.3" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
   <package id="System.Net.Http.WinHttpHandler" version="9.0.3" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.1" targetFramework="net48" />
-  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
-  <package id="System.Security.Cryptography.ProtectedData" version="4.5.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.ProtectedData" version="9.0.3" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="9.0.3" targetFramework="net48" />
   <package id="System.Text.Json" version="9.0.3" targetFramework="net48" />
