MicrosoftConfigurationBuilders usersecrets FTW!

--- a/universal-print-dotnet/Web.config
+++ b/universal-print-dotnet/Web.config
@@ -1,18 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-	<appSettings>
-		<add key="ida:AppID" value=""/>
-		<add key="ida:AppSecret" value=""/>
-		<add key="ida:TenantId" value=""/>
-		<add key="ida:RedirectUri" value=""/>
-		<add key="ida:AppScopes" value="User.Read Printer.Read.All PrinterShare.ReadBasic.All PrintJob.ReadWrite"/>
-	</appSettings>
+  <configSections>
+    <section name="configBuilders" type="System.Configuration.ConfigurationBuildersSection, System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" restartOnExternalChanges="false" requirePermission="false"/>
+  </configSections>
+  <configBuilders>
+    <builders>
+      <add name="Secrets" userSecretsId="a6ac9202-f51a-4008-8f53-9f349da94dc7" type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+    </builders>
+  </configBuilders>
+  <appSettings configBuilders="Secrets">
+    <add key="ida:AppID" value=""/>
+    <add key="ida:AppSecret" value=""/>
+    <add key="ida:TenantId" value=""/>
+    <add key="ida:RedirectUri" value=""/>
+    <add key="ida:AppScopes" value="User.Read Printer.Read.All PrinterShare.ReadBasic.All PrintJob.ReadWrite"/>
+  </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.8"/>
+    <compilation targetFramework="4.8" debug="true"/>
     <httpRuntime targetFramework="4.8"/>
   </system.web>
   <runtime>
@@ -165,11 +173,8 @@
   </runtime>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701;612;618"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" warningLevel="4"
-        compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+      <compiler language="c#;cs;csharp" extension=".cs" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
     </compilers>
   </system.codedom>
 </configuration>
