--- a/universal-print-dotnet/packages.config
+++ b/universal-print-dotnet/packages.config
@@ -14,6 +14,8 @@
   <package id="Microsoft.Bcl.Memory" version="9.0.3" targetFramework="net48" />
   <package id="Microsoft.Bcl.TimeProvider" version="9.0.3" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net48" />
+  <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="3.0.0" targetFramework="net48" />
+  <package id="Microsoft.Configuration.ConfigurationBuilders.UserSecrets" version="3.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.3" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.3" targetFramework="net48" />
   <package id="Microsoft.Graph" version="4.54.0" targetFramework="net48" />
