auth scope changes put base scopes in new setting Remove printerShare.Status.State due to printer issues

--- a/universal-print-dotnet/Web.config
+++ b/universal-print-dotnet/Web.config
@@ -17,7 +17,8 @@
     <add key="ida:AppSecret" value=""/>
     <add key="ida:TenantId" value=""/>
     <add key="ida:RedirectUri" value=""/>
-    <add key="ida:AppScopes" value="User.Read Printer.Read.All PrinterShare.ReadBasic.All PrintJob.ReadWrite"/>
+    <add key="ida:GraphScopes" value="User.Read Printer.Read.All PrinterShare.ReadBasic.All PrintJob.ReadWrite"/>
+	<add key="ida:BaseScopes" value="openid email profile offline_access https://database.windows.net//user_impersonation"/>
   </appSettings>
   <system.web>
     <compilation targetFramework="4.8" debug="true"/>
